apps/yelb/yelb-svc-ui-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: yelb-ui-svc-lb
  labels:
    app: yelb-ui
    tier: frontend
spec:
  type: LoadBalancer
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: yelb-ui
    tier: frontend
