apps/yelb/yelb-ui-np.yaml
apiVersion: v1
kind: Service
metadata:
  name: yelb-ui-np
  labels:
    app: yelb-ui
    tier: frontend
  namespace: yelb
spec:
  type: ClusterIP  #NodePort
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
    nodePort: 31001
  selector:
    app: yelb-ui
    tier: frontend
