apps/yelb/yelb-ui-svc-np.yaml
apiVersion: v1
kind: Service
metadata:
  name: yelb-ui-svc-np
  labels:
    app: yelb-ui
    tier: frontend
  namespace: yelb
spec:
  type: NodePort
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
    nodePort: 30001
  selector:
    app: yelb-ui
    tier: frontend
