apps/yelb/http-ingress-np.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: yelb-http-ingress
  labels:
    app: yelb
spec:
  rules:
    - host: yelbhttp.apps.ocp-jb.vsanpe.vmware.com
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: yelb-ui-svc-np
              port:
                number: 80
