apps/yelb/route-secure-ingress.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: yelb-route-https
spec:
  host: yelbhttps.apps.ocp-cl03.vmware.ocpeval.scstec.net
  path: /
  to:
    kind: Service
    name: yelb-ui-cip
    weight: 100
  #port:
  #  targetPort: 80
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: None
    #caCertificate: |-
    #  -----BEGIN CERTIFICATE-----
    #  MIIDoTCCAomgAwIBAgIJAPbcgzoWieSlMA0GCSqGSIb3DQEBCwUAMGcxCzAJBgNV
    #  BAYTAlVTMRUwEwYDVQQHDAxEZWZhdWx0IENpdHkxHDAaBgNVBAoME0RlZmF1bHQg
    #  Q29tcGFueSBMdGQxIzAhBgNVBAMMGioub2NwMDEuYXZpZGVtby52bXdhcmUuY29t
    #  MB4XDTIwMDkxNTE0MDAyMFoXDTI1MDkxNDE0MDAyMFowZzELMAkGA1UEBhMCVVMx
    #  FTATBgNVBAcMDERlZmF1bHQgQ2l0eTEcMBoGA1UECgwTRGVmYXVsdCBDb21wYW55
    #  IEx0ZDEjMCEGA1UEAwwaKi5vY3AwMS5hdmlkZW1vLnZtd2FyZS5jb20wggEiMA0G
    #  CSqGSIb3DQEBAQUAA4IBDwAwggEKAoIBAQCn3hDNlVXw+I5lA1UZQaNJjf6I4uZM
    #  EWnvriBHhTu8fS7qTvy8Q9tyEnBnlWq1z1cWLGaFYTvR5V1ZJHwZTqlKoUylAnQX
    #  t+VDj6AEm4J5QHh+UFvsbqjURRWRWm75pZawoSGAPUGMKnrmZfndwgaz0YmXEO7f
    #  WdvQ/N3e32vtnI2Wryk2H6WcoysdGFvvxtl8nvwIFT70PDUmujZRH8wFP4DgaIV4
    #  unB9iAsWwHz1muf2/LfqDfg/fxgjqUSCOqTPNmkQTy2Yn02ToIt5gPPDZ2NilO3k
    #  W3hMf7DkIITAa0kM3NkF3Z0gbu2lV31sNE67P/1181765HqVzy8Mvk+HAgMBAAGj
    #  UDBOMB0GA1UdDgQWBBSnPMifdIQBceURlXSG9LDCA5uWujAfBgNVHSMEGDAWgBSn
    #  PMifdIQBceURlXSG9LDCA5uWujAMBgNVHRMEBTADAQH/MA0GCSqGSIb3DQEBCwUA
    #  A4IBAQB3YNf+3NVCmlf6w9hmCtR0tLAb7JqLu4cmSDA4EHx2/xl5nF915vXCEOrp
    #  v9h5QosAdpf2ZDAuHrJyDN0QJq0JAdJWKoaeEpEB2hj+YrwNFT8/mGTqe0Tru1W/
    #  gU6LZOl4p/sFCjrXOqrpuamPKHHVW1A7LWFrPamHGtA7QO+FAIns7kb3LuImQMt9
    #  Eu5ujiVepsJjdMKPP8IO1MeRjRdhI5ULeowVbgBSX5edLJ+H6fqy6SVl/d4exeN5
    #  OtfW2sthR8APfVWXGpikmpubaAWhG9foEzR2P7RJZJprPidK4F+ohUoOH6uHUmZr
    #  Zl+L1KshiGICkEHIROTl0UGofOeC
    #  -----END CERTIFICATE-----
    certificate: |-
      -----BEGIN CERTIFICATE-----
      MIIDszCCApugAwIBAgIJAL1Wn9EArSj1MA0GCSqGSIb3DQEBCwUAMGcxCzAJBgNV
[...]
      3D8/10STaiIJPCPjgaZwcUbVHYPK4qkatGa9PdurnwkzRkWtoWaC
      -----END CERTIFICATE-----
    key: |-
      -----BEGIN RSA PRIVATE KEY-----
      MIIEpAIBAAKCAQEArnFhJMaPsqx0mkAQ+q2Wi4qM2zYzVl8MJyXSkO9tvGmNx1Kr
[...]
      HYYmE+RmYOBLd4PrSGX5/Z45FgSqODuLfnPE6cx6OHzd+L8Xp0+3fA==
      -----END RSA PRIVATE KEY-----
  wildcardPolicy: None
